Issue #1738252 by jessebeach - hide the responsive layout preview on small screens.

--- a/plugins/layouts/ResponsiveLayoutDesigner/assets/css/application.css
+++ b/plugins/layouts/ResponsiveLayoutDesigner/assets/css/application.css
@@ -273,6 +273,11 @@
   position: absolute;
   top: 100px;
 }
+@media (max-width:600px) {
+  .rld-layout-previewer {
+    display: none;    
+  }
+}
 .rld-modal-screen {
   background-color: white;
   bottom: 0;
